# cognicore-ai

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst
docs/source/how_to/: create_a_custom_tool.rst  index.rst  save_a_conversation.rst  write_a_simulation.rst
docs/source/user_guide/: 01_agents.rst  02_llms.rst  03_memory.rst  04_tools.rst  05_simulation.rst  index.rst
src/: example.py
src/cognicore/: __init__.py  agents.py  memory.py
src/cognicoreai/: __init__.py  agents.py  llms.py  simulation.py  tools.py
tests/: test_agent_integration.py  test_memory.py  test_simulation.py  test_tools.py
